<resources>
    <string name="app_name">Diabetes Management</string>
    <string name="txtView_data">Data</string>
    <string name="btn_graph">GRAPHS</string>
    <string name="btn_lists">LISTS</string>
    <string name="btn_stats">STATS</string>
    <string name="txtView_activity">Activity Type</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="exercise">Exercise</string>
    <string name="diet">Diet</string>
    <string name="txtView_search_from">From:</string>
    <string name="txtView_search_to">To:</string>
    <string name="search">Search</string>
    <string name="txtView_search_keyword">Keyword:</string>
    <string name="graph_preview">Graph Preview</string>
    <string name="appbar_scrolling_view_behavior">Menu</string>
    <string name="hint_keyword">Enter keywords</string>
    <string name="meal">Meal</string>
    <string name="time">Time:</string>
    <string name="amount">Amount:</string>
    <string name="name">Name:</string>
    <string name="timehint">00:00am/pm</string>
    <string name="amountHint">8 oz</string>
    <string name="foodNameHint">Apple</string>
    <string name="submit">Submit</string>
    <string name="bloodGlucoseLevel">Blood Glucose Level</string>
    <string name="value">Value</string>
    <string name="valuehint">90</string>
    <string name="activityhint">Activity</string>
    <string name="descriptionhint">Description</string>
    <string name="medicine">Medicine</string>
    <string name="medication">Medication</string>
    <string name="medicationhint">Insulin</string>
    <string name="hint_date">MM/DD/YYYY</string>
    <string name="history">History</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="regimen">Regimen</string>
    <string name="food">Food</string>
    <string name="logout">Logout</string>
    <string name="dialog_message">Logout from app?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="add_activity">Add Activity</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="welcome">Welcome</string>
    <string name="bgl">BGL</string>
    <string name="hint_from_date">From Date</string>
    <string name="hint_end_date">End Date</string>
    <string-array name="activity_array">
        <item>Blood Glucose</item>
        <item>Food</item>
        <item>Exercise</item>
        <item>Medicine</item>
    </string-array>
    <string name="title_activity_etc">etc</string>
    <string name="your_recent_activity"><u>Your Recent Activity</u></string>
    <string name="create_user">Create User</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="password">Password</string>
    <string name="re_enter_email">Re-enter Email</string>
    <string name="name_email_com">john.doe@email.com</string>
    <string name="textview">TextView</string>
    <string name="no_account_yet_create_one">No account yet? Create One</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="add_regimen">Add Regimen</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="error_password"><![CDATA[Password < 4 characters. Make it longer.]]></string>
</resources>
