<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Medicine">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedcorner"
        android:elevation="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Meal.heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/medicine"
            android:textAppearance="@android:style/TextAppearance.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/textView_Heading" />

        <TextView
            android:id="@+id/Meal.Time.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/time"
            android:textAppearance="@android:style/TextAppearance.Large"
            app:layout_constraintBottom_toBottomOf="@+id/Meal.editText.time"
            app:layout_constraintEnd_toEndOf="@+id/Meal.Amount.label" />

        <TextView
            android:id="@+id/Meal.Amount.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/amount"
            android:textAppearance="@android:style/TextAppearance.Large"
            app:layout_constraintBottom_toBottomOf="@+id/Meal.editText.amount"
            app:layout_constraintEnd_toEndOf="@+id/Meal.Name.label" />

        <TextView
            android:id="@+id/Meal.Name.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/medication"
            android:textAppearance="@android:style/TextAppearance.Large"
            app:layout_constraintBottom_toBottomOf="@+id/Meal.editText.Food"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Meal.heading"
            app:layout_constraintVertical_bias="0.857" />

        <EditText
            android:id="@+id/Meal.editText.time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/timehint"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="@+id/Meal.editText.amount"
            app:layout_constraintTop_toBottomOf="@+id/Meal.editText.amount" />

        <EditText
            android:id="@+id/Meal.editText.amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/amountHint"
            android:inputType="text|number"
            app:layout_constraintEnd_toEndOf="@+id/Meal.editText.Food"
            app:layout_constraintTop_toBottomOf="@+id/Meal.editText.Food" />

        <EditText
            android:id="@+id/Meal.editText.Food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/medicationhint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Meal.Name.label"
            app:layout_constraintTop_toBottomOf="@+id/Meal.heading" />

        <Button
            android:id="@+id/Medicine.Submit"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Meal.editText.time" />
    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/Medicine.data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/actionModePasteDrawable" />

</android.support.constraint.ConstraintLayout>