<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutWrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:id="@+id/linearLayoutCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/Data.Radio.bloodGlucose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/bgl" />

            <CheckBox
                android:id="@+id/Data.Radio.exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/exercise" />

            <CheckBox
                android:id="@+id/Data.Radio.diet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/diet" />

            <CheckBox
                android:id="@+id/Data.Radio.medication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/medication" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llrow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Date:"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Data.editText.fromDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/hint_from_date"
                android:inputType="date"
                tools:layout_editor_absoluteY="104dp" />

            <EditText
                android:id="@+id/Data.editText.toDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/hint_end_date"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llrow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/txtView_data_searchKeyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtView_search_keyword"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/Data.editText.keywords"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/Data.editText.keywords"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_keyword"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llrow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/txtView_data_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Values:"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/Data.editText.keywords"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/Data.editText.startval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="40.0"
                android:inputType="number" />

            <EditText
                android:id="@+id/Data.editText.endval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="600.0"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/Data.search"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <ListView
            android:id="@+id/Data.listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <!--<android.support.v7.widget.RecyclerView-->
    <!--android:id="@+id/recyclerViewListData"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@drawable/recycler_rounded_corner"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/linearLayoutWrapper"-->
    <!--app:layout_constraintBottom_toTopOf="@id/navigation"/>-->

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</android.support.constraint.ConstraintLayout>